--- a/src/main/resources/htmlpublisher/HtmlPublisherTarget/config.properties
+++ b/src/main/resources/htmlpublisher/HtmlPublisherTarget/config.properties
@@ -4,6 +4,7 @@ reportTitles.title=Index page title[s] (Optional)
 reportFiles.includes=Include files
 reportFiles.includesHelp=Follows the Ant glob syntax, such as **/*.html,**/*.css
 reportName.title=Report title
+displayName.title=Report display name
 keepAll.title=Keep past HTML reports
 alwaysLinkToLastBuild.title=Always link to last build
 allowMissing.title=Allow missing report
